--- a/ReaStarMultithreaded.vcxproj
+++ b/ReaStarMultithreaded.vcxproj
@@ -76,11 +76,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\BOOST;$(BOOST_SDK)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\BOOST;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>C:\BOOST\stage\lib;$(BOOST_SDK)\stage\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\BOOST\stage\lib;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -126,6 +126,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="QueuingWork.h" />
+    <ClInclude Include="SyncTwoProcesses.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
