--- a/REAstar/REAstar.vcxproj.filters
+++ b/REAstar/REAstar.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="SearchNode.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.h">
