--- a/REAstar/REAstar.vcxproj.filters
+++ b/REAstar/REAstar.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\RenderGrid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\VisTile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\stdafx.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\RenderGrid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\VisTile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
